<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:background="#FDF1F1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="204dp"
        android:layout_height="123dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/alata"
        android:text="@string/currency_converter"
        android:textColor="#055CDD"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/toSpinner"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/round"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromSpinner" />

    <TextView
        android:id="@+id/from"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:padding="6dp"
        android:text="@string/from"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fromSpinner"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <EditText
        android:id="@+id/inputamount"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:gravity="left|center_vertical"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fromcurrency"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromcurrency"
        tools:ignore="RtlHardcoded" />

    <Spinner
        android:id="@+id/fromSpinner"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/to"
        android:layout_width="82dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:gravity="left"
        android:padding="6dp"
        android:text="@string/to"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/toSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromSpinner"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <TextView
        android:id="@+id/fromcurrency"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/currency"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/toSpinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toSpinner"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/currency_world"
        android:textColor="#009688"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/globe_earth"
        app:layout_constraintBottom_toTopOf="@+id/fromSpinner"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/global_economy" />

    <TextView
        android:id="@+id/convertedcurrency"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:gravity="left|center_vertical"
        android:background="@drawable/round"
        android:hint="@string/converted_amount"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tocurrency"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/convertbutton"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/result"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:padding="5dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tocurrency"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="@+id/convertbutton"
        app:layout_constraintTop_toBottomOf="@+id/convertbutton"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tocurrency"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:gravity="center"
        android:padding="5dp"

        android:text="@string/currency"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/convertedcurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertbutton"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/convertbutton"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btnround"
        android:fontFamily="@font/alata"
        android:text="@string/convert"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/inputamount"
        app:layout_constraintStart_toStartOf="@+id/inputamount"
        app:layout_constraintTop_toBottomOf="@+id/inputamount"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/banknotes"
        android:backgroundTint="#447E00"
        android:contentDescription="@string/icon1"
        app:layout_constraintBottom_toBottomOf="@+id/toSpinner"
        app:layout_constraintEnd_toEndOf="@+id/toSpinner"
        app:layout_constraintTop_toTopOf="@+id/toSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/icon2"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/banknotes"
        android:backgroundTint="#447E00"
        android:contentDescription="@string/icon2"
        app:layout_constraintBottom_toBottomOf="@+id/fromSpinner"
        app:layout_constraintEnd_toEndOf="@+id/fromSpinner"
        app:layout_constraintTop_toTopOf="@+id/fromSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>